--- a/templates/register.html
+++ b/templates/register.html
@@ -1,30 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
+{% block title %}
+Đăng kí
+{% endblock title %}
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>nro2</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Albert+Sans&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alfa+Slab+One&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Angkor&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arima&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Berkshire+Swash&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Georama&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans+Canadian+Aboriginal&amp;display=swap">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Praise&amp;display=swap">
-    <link rel="stylesheet" href="assets/css/Navbar-With-Button-icons.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/VentasPro-Login.css">
-</head>
-
-<body>
-    <div id="main" style="background: url(&quot;assets/img/background.png&quot;);margin: 0px;">
+{% block body %}
+    <div id="main" style="background: url(&quot;static/img/background.png&quot;);margin: 0px;">
         <div class="text-center" id="info">
             <h3 class="text-center" style="font-family: Angkor, serif;margin: 32px;">Register</h3>
-            <form class="text-start" id="form-login" style="margin: 4px 52.5px 0px;">
+            <!-- <form class="text-start" id="form-login" style="margin: 4px 52.5px 0px;">
                 <div class="mb-3" style="margin: 0px;padding: 0px;"><label class="form-label" id="lbl-username" for="txt-usuario" style="margin: 0px;padding: 0px;height: 24px;font-size: 16px;font-family: 'Noto Sans Canadian Aboriginal', sans-serif;">Username</label><input class="form-control" type="text" id="txt-username" style="margin: 0px;padding: 9px;"></div>
                 <div class="mb-3" style="margin: 0px;padding: 0px;"><label class="form-label" id="lbl-email" for="txt-usuario" style="margin: 0px;padding: 0px;height: 24px;font-size: 16px;font-family: 'Noto Sans Canadian Aboriginal', sans-serif;">Email</label><input class="form-control" type="text" id="txt-email" style="margin: 0px;padding: 9px;"></div>
                 <div class="mb-3" style="margin: 0px;padding: 0px;"><label class="form-label" id="lbl-password-1" for="txt-password" style="height: 20px;font-size: 16px;font-family: 'Noto Sans Canadian Aboriginal', sans-serif;">Password</label><input class="form-control" type="password" id="txt-password-1" style="padding: 9px 12px;"></div>
@@ -32,11 +15,38 @@
                     <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828l.645-1.937zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.734 1.734 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.734 1.734 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.734 1.734 0 0 0 3.407 2.31l.387-1.162zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L10.863.1z"></path>
                 </svg>SUBMIT<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" fill="currentColor" viewBox="0 0 16 16" class="bi bi-stars">
                     <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828l.645-1.937zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.734 1.734 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.734 1.734 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.734 1.734 0 0 0 3.407 2.31l.387-1.162zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L10.863.1z"></path>
-                </svg></button>
+                </svg>
+            </button> -->
+            {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="notification is-danger">
+                    {{ messages[0] }}
+                </div>
+            {% endif %}
+            {% endwith %}
+            <!-- Login form -->
+            <form method="POST" action="/register">
+                <div class="field">
+                    <div class="control">
+                        <input class="input is-large" type="username" name="username" placeholder="Your Username" autofocus="">
+                    </div>
+                </div>
+                <div class="field">
+                    <div class="control">
+                        <input class="input is-large" type="email" name="email" placeholder="Your Email">
+                    </div>
+                </div>
+    
+                <div class="field">
+                    <div class="control">
+                        <input class="input is-large" type="password" name="password" placeholder="Your Password">
+                    </div>
+                </div>
+                <button class="button is-block is-info is-large is-fullwidth">Register</button>
+            </form>
         </div>
     </div>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
-</body>
+    <script src="static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="static/js/bs-init.js"></script>
 
-</html>
+{% endblock body %}
