--- a/templates/register.html
+++ b/templates/register.html
@@ -20,7 +20,7 @@
             {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <div class="notification is-danger">
-                    {{ messages[0] }}
+                    {{ messages[0] }}. Go to <a href="{{ url_for('auth.login') }}">login page</a>.
                 </div>
             {% endif %}
             {% endwith %}
