--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,8 @@
             {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <div class="notification is-danger">
-                    {{ messages[0] }}
+                    <p>{{ messages[0] }}</p>
+                    <p>Create new account? Go to <a href="/register">Register</a></p>
                 </div>
             {% endif %}
             {% endwith %}
